--- a/index.html
+++ b/index.html
@@ -15,34 +15,35 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </div>
-    <div class="hero">
+    <div class="hero-section">
         <div class="hero-text">
-            This website is awesome
+            <div class="hero-maintext">This website is awesome</div>
             <div class="hero-subtext">
                 This website has some subtext that goes up here
                 under the main title. It's a smaller font and the
                 color is lower contrast.
             </div>
+            <button>Sign up</button>
         </div>
-        <div>An image goes here</div>
+        <div><img src="images/Msft_Nostalgia_Landscape.jpg" height="240"></div>
     </div>
     <div class="info-section">
         <div class="info-header">Some random information</div>
         <ul class="info-list">
             <li> 
-                <div>An image goes here</div>
+                <div><img src="images/FullMoon2010.jpg" height="200"></div>
                 this is some subtext under an illustration
             </li>
             <li> 
-                <div>An image goes here</div>
+                <div><img src="images/FullMoon2010.jpg" height="200"></div>
                 this is some subtext under an illustration
             </li>
             <li> 
-                <div>An image goes here</div>
+                <div><img src="images/FullMoon2010.jpg" height="200"></div>
                 this is some subtext under an illustration
             </li>
             <li> 
-                <div>An image goes here</div>
+                <div><img src="images/FullMoon2010.jpg" height="200"></div>
                 this is some subtext under an illustration
             </li>
         </ul>
@@ -60,8 +61,10 @@
     </div>
     <div class="action-section">
         <div class="action-text">
-            <div class="primary">Call to action! It's time!</div>
-            <div class="secondary">
+            <div class="action-maintext">
+                Call to action! It's time!
+            </div>
+            <div class="action-subtext">
                 Sign up for our product by clicking that button
                 right over there!
             </div>
