Added container divs for consistent widths

--- a/index.html
+++ b/index.html
@@ -8,68 +8,79 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-logo">Header Logo</div>
-        <ul class="header-links">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+        <div class="container">
+            <div class="header-logo">Header Logo</div>
+            <ul class="header-links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
     </div>
     <div class="hero-section">
-        <div class="hero-text">
-            <div class="hero-maintext">This website is awesome</div>
-            <div class="hero-subtext">
-                This website has some subtext that goes up here
-                under the main title. It's a smaller font and the
-                color is lower contrast.
+        <div class="container">
+            <div class="hero-text">
+                <div class="hero-maintext">This website is awesome</div>
+                <div class="hero-subtext">
+                    This website has some subtext that goes up here
+                    under the main title. It's a smaller font and the
+                    color is lower contrast.
+                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
-        </div>
-        <div><img src="images/Msft_Nostalgia_Landscape.jpg" height="240"></div>
+            <img class="hero-image" src="images/Msft_Nostalgia_Landscape.jpg">
+        </div>     
+           
     </div>
     <div class="info-section">
-        <div class="info-header">Some random information</div>
-        <ul class="info-list">
-            <li> 
-                <div><img src="images/FullMoon2010.jpg" height="200"></div>
-                this is some subtext under an illustration
-            </li>
-            <li> 
-                <div><img src="images/FullMoon2010.jpg" height="200"></div>
-                this is some subtext under an illustration
-            </li>
-            <li> 
-                <div><img src="images/FullMoon2010.jpg" height="200"></div>
-                this is some subtext under an illustration
-            </li>
-            <li> 
-                <div><img src="images/FullMoon2010.jpg" height="200"></div>
-                this is some subtext under an illustration
-            </li>
-        </ul>
+        <div class="container">
+            <div class="info-header">Some random information</div>
+            <ul class="info-list">
+                <li> 
+                    <div><img src="images/FullMoon2010.jpg" height="200"></div>
+                    this is some subtext under an illustration
+                </li>
+                <li> 
+                    <div><img src="images/FullMoon2010.jpg" height="200"></div>
+                    this is some subtext under an illustration
+                </li>
+                <li> 
+                    <div><img src="images/FullMoon2010.jpg" height="200"></div>
+                    this is some subtext under an illustration
+                </li>
+                <li> 
+                    <div><img src="images/FullMoon2010.jpg" height="200"></div>
+                    this is some subtext under an illustration
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="quote-section">
-        <div class="quote">
-            <div class="quote-text">
-                This is an inspiring quote, or a testimonial from a
-                customer. Maybe it's just filling up space, or maybe
-                people will actually read it. Who knows? All I know
-                is that it looks nice.
+        <div class="container">
+            <div class="quote">
+                <div class="quote-text">
+                    This is an inspiring quote, or a testimonial from a
+                    customer. Maybe it's just filling up space, or maybe
+                    people will actually read it. Who knows? All I know
+                    is that it looks nice.
+                </div>
+                <div class="quote-author">-Thor, God of Thunder</div>
             </div>
-            <div class="quote-author">-Thor, God of Thunder</div>
         </div>
     </div>
     <div class="action-section">
-        <div class="action-text">
-            <div class="action-maintext">
-                Call to action! It's time!
+        <div class="container">
+            <div class="action-text">
+                <div class="action-maintext">
+                    Call to action! It's time!
+                </div>
+                <div class="action-subtext">
+                    Sign up for our product by clicking that button
+                    right over there!
+                </div>
             </div>
-            <div class="action-subtext">
-                Sign up for our product by clicking that button
-                right over there!
-            </div>
+            <button>Sign up</button>
         </div>
-        <button>Sign up</button>
     </div>
     <div class="footer">
         <div class="footnote">Copyright @ The Odin Project 2021</div>
