Finished information section

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
             <div class="info-header">Some random information</div>
             <ul class="info-list">
                 <li> 
-                    <div><img src="images/FullMoon2010.jpg" height="200"></div>
+                    <div><img src="images/FullMoon2010.jpg"></div>
                     this is some subtext under an illustration
                 </li>
                 <li> 
-                    <div><img src="images/FullMoon2010.jpg" height="200"></div>
+                    <div><img src="images/FullMoon2010.jpg"></div>
                     this is some subtext under an illustration
                 </li>
                 <li> 
-                    <div><img src="images/FullMoon2010.jpg" height="200"></div>
+                    <div><img src="images/FullMoon2010.jpg"></div>
                     this is some subtext under an illustration
                 </li>
                 <li> 
-                    <div><img src="images/FullMoon2010.jpg" height="200"></div>
+                    <div><img src="images/FullMoon2010.jpg"></div>
                     this is some subtext under an illustration
                 </li>
             </ul>
