--- a/index.html
+++ b/index.html
@@ -70,16 +70,18 @@
     </div>
     <div class="action-section">
         <div class="container">
-            <div class="action-text">
-                <div class="action-maintext">
-                    Call to action! It's time!
+            <div class="action-box">
+                <div class="action-text">
+                    <div class="action-maintext">
+                        Call to action! It's time!
+                    </div>
+                    <div class="action-subtext">
+                        Sign up for our product by clicking that button
+                        right over there!
+                    </div>
                 </div>
-                <div class="action-subtext">
-                    Sign up for our product by clicking that button
-                    right over there!
-                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
         </div>
     </div>
     <div class="footer">
