--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div class="footer">
-        <div class="footnote">Copyright @ The Odin Project 2021</div>
+        <div class="container">Copyright @ The Odin Project 2021</div>
     </div>
 </body>
 </html>
