Beginning hololive-inspired landing page

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="header">
         <div class="container">
-            <div class="header-logo">Header Logo</div>
+            <div class="header-logo">hololive</div>
             <ul class="header-links">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">TALENT</a></li>
+                <li><a href="#">SHOP</a></li>
             </ul>
         </div>
     </div>
@@ -34,7 +34,7 @@
     </div>
     <div class="info-section">
         <div class="container">
-            <div class="info-header">Some random information</div>
+            <div class="info-header">Notable Talent</div>
             <ul class="info-list">
                 <li> 
                     <div><img src="images/FullMoon2010.jpg"></div>
@@ -59,12 +59,10 @@
         <div class="container">
             <div class="quote">
                 <div class="quote-text">
-                    This is an inspiring quote, or a testimonial from a
-                    customer. Maybe it's just filling up space, or maybe
-                    people will actually read it. Who knows? All I know
-                    is that it looks nice.
+                    Just because you spend a lot of time on 
+                    something, doesn't mean it'll be good.
                 </div>
-                <div class="quote-author">-Thor, God of Thunder</div>
+                <div class="quote-author">-Calliope Mori</div>
             </div>
         </div>
     </div>
