Documentation and crediting

--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
         </div>
     </div>
     <div class="footer">
-        <div class="container">Copyright @ The Odin Project 2021</div>
+        <div class="container">
+            <a href="https://github.com/gabriellopez23/landing-page/tree/main">
+                Code by Gabriel Lopez Lugo
+            </a>
+            Copyright @ The Odin Project
+        </div>
     </div>
 </body>
 </html>
